apps/base/kimai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kimai
  namespace: kimai
spec:
  selector:
    app.kubernetes.io/name: kimai
  ports:
    - name: http
      port: 80
      targetPort: 8001
