apps/base/kimai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kimai
  namespace: kimai
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/ssl-redirect: "true"
    nginx.org/redirect-to-https: "true"
    nginx.org/client-max-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [kimai.jit.services] # CHANGE ME (patched per overlay)
      secretName: kimai-tls
  rules:
    - host: kimai.jit.services # CHANGE ME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kimai
                port:
                  number: 80
